eomtool mb workflow in progress

--- a/1/EomTool/EomApp1/Screens/Final/FinalizeForm1.resx
+++ b/1/EomTool/EomApp1/Screens/Final/FinalizeForm1.resx
@@ -169,7 +169,7 @@
     <value>True</value>
   </metadata>
   <metadata name="campaignBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>156, 17</value>
+    <value>152, 17</value>
   </metadata>
   <metadata name="finalizeDataSet1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -190,6 +190,9 @@
     <value>True</value>
   </metadata>
   <metadata name="modified.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ApprovalCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="verifyCol.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
