LT: prevent skipping ahead

--- a/2/LendingTree/LTWeb/Resources/SessionKeys.resx
+++ b/2/LendingTree/LTWeb/Resources/SessionKeys.resx
@@ -123,4 +123,7 @@
   <data name="LTModel" xml:space="preserve">
     <value>LTModel</value>
   </data>
+  <data name="SessionVars" xml:space="preserve">
+    <value>SessionVars</value>
+  </data>
 </root>
